# premier-league-dashboard

./: README.md  Soccerdata.pbix  main.py  pyproject.toml
.github/workflows/: run_etl.yaml
